# numerals

./: README.md  numerals.cabal
app/: Main.hs
src/: Numerals.hs
test/: NumeralsSpec.hs
